--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "@glennsl/bs-json": "^5.0.1",
-    "bs-css": "^10.0.0",
+    "bs-css": "^11.0.0",
     "bs-fetch": "^0.5.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0",
     "reason-react": "0.7.0"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \" re:watch\"",
+    "start": "concurrently  \"npm run re:watch\" \"react-scripts start\"",
     "build": "concurrently \"react-scripts build\" \"re:build \"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -35,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "bs-platform": "5.0.6"
+    "bs-platform": "5.2.1"
   }
 }
